k8s/traefik-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-kiii-final-project
  namespace: kiii-final-project-namespace
spec:
  stripPrefix:
    prefixes:
      - /kiii-final-project
