k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-final-project-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kiii-final-project
  template:
    metadata:
      labels:
        app: kiii-final-project
    spec:
      containers:
      - name: kiii-final-project
        image: amatanasovska/kiii-final-project:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
