k8s/database-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kiii-final-project-postgres
  namespace: kiii-final-project-namespace
spec:
  serviceName: kiii-final-project-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: kiii-final-project-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: kiii-final-project-postgres-data
          persistentVolumeClaim:
            claimName: kiii-final-project-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kiii-final-project-postgres-service
  namespace: kiii-final-project-namespace
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
