k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kiii-final-project-service
  namespace: kiii-final-project-namespace
spec:
  type: NodePort
  selector:
    app: kiii-final-project
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
      nodePort: 32767
